# QAxWidgetWPS

./: CMakeLists.txt  Readme.md  icon.rc
doc/: et.chm  etapi.chm  wpp.chm  wppapi.chm  wps.chm  wps.chw  wpsapi.chm  wpsapi.chw  测试文档.docx
env/: llvm64.bat  mingw64.bat  mingw64qt.bat  newqtvars64.bat  qtvars32.bat  qtvars64.bat  qtvarsall.bat
src/: FunctionWidget.cpp  FunctionWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  Tools.cpp  Tools.h
